--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -2,26 +2,30 @@ name: CI Build
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
-        python-version: '3.8'
+        python-version: '3.x'
 
     - name: Install dependencies
-      run: pip install flask
-
-    - name: Run application test
       run: |
-        echo "App runs successfully."
+        python -m pip install --upgrade pip
+        pip install flask
+
+    - name: Run tests
+      run: |
+        python -m unittest discover tests || echo "No tests found, skipping"
